<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- The next six Linear Layouts are for each of the news sources -->
    <LinearLayout
        android:id="@+id/ars_technica_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ars_technica_banner"
            android:contentDescription="@string/ars_technica_main_logo"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/engadget_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/engadget_banner"
            android:contentDescription="@string/engadget_main_logo"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/techcrunch_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/techcrunch_banner"
            android:contentDescription="@string/techcrunch_main_logo"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/techradar_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/techradar_banner"
            android:contentDescription="@string/techradar_main_logo"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tnw_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/tnw_banner"
            android:contentDescription="@string/tnw_main_logo"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/verge_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/verge_banner"
            android:contentDescription="@string/verge_main_logo"/>

    </LinearLayout>

    <!-- If none of the news sources is "checked" in settings, this is the LinearLayout that will
     show up instead of any sources Layouts to provide options for which settings to change-->
    <LinearLayout
        android:id="@+id/go_to_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingTop="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/go_to_settings_1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings"
                android:contentDescription="@string/settings_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/go_to_settings_2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/top_right_corner"
                android:contentDescription="@string/up_right_arrow_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/go_to_settings_3"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <TextView
            android:id="@+id/go_to_settings_api_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="36dp"
            android:text="@string/go_to_settings_api"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/go_to_settings_sources_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="36dp"
            android:text="@string/go_to_settings_sources"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    </LinearLayout>

</LinearLayout>