<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="4dp"
    android:paddingEnd="4dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/article_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:paddingTop="4dp"
        android:src="@drawable/blank_image"
        android:contentDescription="@string/article_image_description"/>

    <TextView
        android:id="@+id/article_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ArticleTitle"
        tools:text="@string/article_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/article_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ArticleAuthor"
            tools:text="@string/article_author"/>

        <TextView
            android:id="@+id/time_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ArticleTimeQuantity" />

        <TextView
            android:id="@+id/article_published_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ArticlePublished"
            tools:text="@string/article_published_date"/>

    </LinearLayout>

    <TextView
        android:id="@+id/article_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ArticleDescription"
        tools:text="@string/Lorem_ipsum"/>

</LinearLayout>